# dream_factory_evals

./: .gitignore  Dockerfile  Dockerfile_leaderboard  OPENAI:GPT-4.1-MINI-HR-LEVEL-1.json  OPENAI:GPT-4.1-NANO-HR-LEVEL-1.json  README.md  ai_exp.py  api.ipynb  benchmarking_instructions.md  commands.txt  df_fuse_exp.py  evals_exp.py  exp.py  generate_data.py  pyproject.toml  queries_guide.md  router_graph.py  sample_queries.txt  scoring.py  sglang_commands.txt  streamlit_app.py  test-sglang.py  verify.py
.cursor/rules/: general.mdc  python-style.mdc  query-generation.mdc  query-verification.mdc
.windsurf/workflows/: level4-evals.md  level4-output-types.md
data/: finance_expenses.json  finance_products.json  finance_revenues.json  hr_departments.json  hr_employees.json  hr_policies.json  ops_machines.json  ops_maintenance.json  schema.md
levels/: 1.json  2.json  3.json  4.json  approaches.md
new_data/: finance_expenses.json  finance_products.json  finance_revenues.json  generate_data.py  hr_departments.json  hr_employees.json  hr_policies.json  ops_machines.json  ops_maintenance.json  schema.json
project_docs/: project_framework.md  project_milestones.md
scores/: OPENAI:GPT-4.1-MINI-HR-LEVEL-1.csv  OPENAI:GPT-4.1-NANO-HR-LEVEL-1.csv
src/dream_factory_evals/: OPENAI:GPT-4O-MINI-HR-LEVEL-1.json  __init__.py  advanced_prompt.txt  base_models.py  basic_prompt.txt  complex_df_agent copy.py  create_leaderboard.py  df_agent.py  df_chat.py  df_evals.py  df_mcp.py  dream_factory_mcp.py  hr_1_evals.json  hr_1_evals.py  hr_1_return_types.py  level_1_agent.py  run_eval.py  scoring.py
tests/: test_dream_factory_mcp.py
(+30 files in other folders)
