[project]
name = "dream-factory-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hamza Farhan", email = "thehamza96@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "logfire>=3.11.0",
    "loguru>=0.7.3",
    "pydantic-ai>=0.0.46",
]

[project.scripts]
dream-factory-evals = "dream_factory_evals:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["**/", "!src/"]
